testsuite/poke.pkl/struct-types-diag-9.pk
/* { dg-do compile } */

type Bar =
  struct
  {
    int i;
    any j; /* { dg-error "invalid type" } */
    fun ja = void: {}
  };
